[package]
name = "data-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
chrono = "0.4.23"
itertools = "0.10.5"
linya = "0.3.0"
rustdate = { git="https://github.com/TuuKeZu/rust-auto-update.git"}
tokio = {version="1.24.2", features=["full"]}
anyhow = "1.0.68"